[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satx"
version = "0.3.8"
description = "Exact constraint-based modeling for SAT solvers."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Oscar Riveros" },
]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
keywords = ["sat", "constraint", "exact arithmetic", "solver"]

[project.urls]
Homepage = "https://github.com/maxtuno/SATX"
Source = "https://github.com/maxtuno/SATX"
"Bug Tracker" = "https://github.com/maxtuno/SATX/issues"
License = "https://www.gnu.org/licenses/agpl-3.0.html"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
